# laravel-godemode-v2

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mario/: Dockerfile  Makefile  docker-compose.yml
scripts/: setup.sh
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  custom_template.rs  docker.rs  main.rs  project.rs  state.rs  template.rs
src/components/: CloneProjectModal.vue  ConfirmModal.vue  CreateProjectModal.vue  EnvEditorModal.vue  ImportProjectModal.vue  ProjectControls.vue  TemplateBuilder.vue  TerminalPanel.vue
src/lib/: api.ts  blocks.ts  types.ts
src/lib/blocks/: cache.ts  database.ts  frameworks.ts  helpers.ts  index.ts  mail.ts  presets.ts  queue.ts  runtime.ts  search.ts  storage.ts  tools.ts  types.ts  webserver.ts  websocket.ts
src/router/: index.ts
src/stores/: projects.ts  settings.ts
src/styles/: main.css
src/types/: heroicons.d.ts
src/views/: Dashboard.vue  Settings.vue  Templates.vue
templates/astro/: config.json
templates/astro/stubs/: .env.stub  Dockerfile.stub  Makefile.stub  docker-compose.yml.stub  nginx.conf.stub
templates/laravel/: config.json
templates/laravel/stubs/: .env.stub  Dockerfile.stub  docker-compose.yml.stub  init.sql.stub  mysql-client.cnf.stub  mysql.cnf.stub
templates/nextjs/: config.json
templates/nextjs/stubs/: .env.stub  Dockerfile.stub  Makefile.stub  (+2 more)
templates/nuxt/: config.json
(+5 files in other folders)
